--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html lang="de">
+    <!-- comments in HTML-->
+     <!--star thead Tag - place fpr meta tags!-->
     <head>
         <title>Website kamimaze</title>
         <meta charset="utf-8">
     </head>
+    <!--end Head Tag-->
 <body>
+    <!--comments-->
     Hallo zusammen!
 </body>
 </html>
