--- a/new index.html
+++ b/new index.html
@@ -7,6 +7,19 @@
     <title>Daa </title>
 </head>
 <body>
-    
+    <!--H1 kann nur einmal genutzt werden!-->
+    <H1>H1</H1>
+    <H2>H2</H2>
+    <!--in HTML gibt es immer nur ein Space, auch wenn im Code mehr leerzeichen sind-->
+    hello, it is with                       lots of space
+    <br> next line
+    <br>
+    <!--create hr line-->
+    <hr>
+    <p>
+
+    </p>
+    <a href="Kontakt.html">go to page kontakt</a>
+
 </body>
 </html>
